--- a/cerbero-pre.ipynb
+++ b/cerbero-pre.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNz52EJZsVqRwdMxjfEM1lO",
+      "authorship_tag": "ABX9TyN7qCCeXPl1Si01Dh72YJbJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,15 +82,18 @@
         "def descargar_noticias_y_calcular_sentiment_df(df, symbol, search_name):\n",
         "    \"\"\"\n",
         "    Descarga noticias, calcula el sentiment y actualiza el DataFrame pasado.\n",
-        "    Devuelve el DataFrame actualizado sin guardar todavía en disco.\n",
+        "    Devuelve el DataFrame actualizado en memoria sin guardar todavía en disco.\n",
         "    \"\"\"\n",
         "    import os\n",
-        "    os.makedirs(\"logs\", exist_ok=True)\n",
-        "\n",
+        "    import pandas as pd\n",
         "    from urllib.parse import quote\n",
         "    import feedparser\n",
-        "    import pandas as pd\n",
         "\n",
+        "    os.makedirs(\"logs\", exist_ok=True)\n",
+        "\n",
+        "    # ========================\n",
+        "    # Descargar noticias\n",
+        "    # ========================\n",
         "    query = quote(search_name)\n",
         "    feed = feedparser.parse(f\"https://news.google.com/rss/search?q={query}\")\n",
         "    noticias = []\n",
@@ -104,66 +107,74 @@
         "    noticias_df = pd.DataFrame(noticias)\n",
         "    if noticias_df.empty:\n",
         "        registrar_log(f\"{symbol} - No se encontraron noticias\")\n",
-        "        return df\n",
-        "\n",
-        "    # Calcular sentimiento con VADER\n",
-        "    noticias_df[\"vader_sentiment\"] = noticias_df[\"title\"].apply(lambda x: vader_analyzer.polarity_scores(x)[\"compound\"])\n",
-        "    noticias_df[\"finbert_sentiment\"] = 0  # placeholder FinBERT\n",
-        "\n",
-        "    # Calcular promedios\n",
-        "    vader_promedio = noticias_df[\"vader_sentiment\"].mean()\n",
-        "    finbert_promedio = noticias_df[\"finbert_sentiment\"].mean()\n",
-        "\n",
-        "    # Guardar noticias procesadas\n",
-        "    today_str = pd.Timestamp.utcnow().date()\n",
-        "    noticias_df.to_csv(f\"logs/{symbol}_nuevas_agregadas_{today_str}.csv\", index=False)\n",
-        "    registrar_log(f\"{symbol} - Guardadas {len(noticias_df)} noticias con sentiment\")\n",
-        "\n",
-        "    # ===========================================\n",
-        "    # Actualizar DataFrame principal en memoria\n",
-        "    # ===========================================\n",
-        "    if df.empty:\n",
-        "        df = pd.DataFrame([{\n",
-        "            \"timestamp\": (pd.Timestamp.utcnow().date() - pd.Timedelta(days=1)).strftime(\"%Y-%m-%d\"),\n",
-        "            \"vader\": vader_promedio,\n",
-        "            \"finbert\": finbert_promedio,\n",
-        "            \"sentiment_ratio\": vader_promedio / (finbert_promedio + 1e-9),\n",
-        "            \"sentiment_combined\": (vader_promedio + finbert_promedio) / 2\n",
-        "        }])\n",
         "    else:\n",
-        "        df[\"timestamp\"] = pd.to_datetime(df[\"timestamp\"], errors=\"coerce\")\n",
-        "        df[\"timestamp\"] = df[\"timestamp\"].dt.tz_localize(None)\n",
-        "        df[\"date_only\"] = df[\"timestamp\"].dt.date\n",
-        "        last_date = df[\"date_only\"].max()\n",
-        "        last_idx = df[df[\"date_only\"] == last_date].index\n",
+        "        # Calcular sentimiento con VADER (placeholder FinBERT)\n",
+        "        noticias_df[\"vader_sentiment\"] = noticias_df[\"title\"].apply(lambda x: vader_analyzer.polarity_scores(x)[\"compound\"])\n",
+        "        noticias_df[\"finbert_sentiment\"] = 0\n",
         "\n",
-        "        if len(last_idx) == 0:\n",
-        "            # Añadir nueva fila\n",
-        "            new_row = {\n",
+        "        # Promedios\n",
+        "        vader_promedio = noticias_df[\"vader_sentiment\"].mean()\n",
+        "        finbert_promedio = noticias_df[\"finbert_sentiment\"].mean()\n",
+        "\n",
+        "        # Guardar noticias procesadas\n",
+        "        today_str = pd.Timestamp.utcnow().date()\n",
+        "        noticias_df.to_csv(f\"logs/{symbol}_nuevas_agregadas_{today_str}.csv\", index=False)\n",
+        "        registrar_log(f\"{symbol} - Guardadas {len(noticias_df)} noticias con sentiment\")\n",
+        "\n",
+        "        # ========================\n",
+        "        # Actualizar DataFrame principal\n",
+        "        # ========================\n",
+        "        if df.empty:\n",
+        "            # Creamos fila mínima con todas las columnas del CSV si no existía\n",
+        "            df = pd.DataFrame([{\n",
         "                \"timestamp\": (pd.Timestamp.utcnow().date() - pd.Timedelta(days=1)).strftime(\"%Y-%m-%d\"),\n",
         "                \"vader\": vader_promedio,\n",
         "                \"finbert\": finbert_promedio,\n",
         "                \"sentiment_ratio\": vader_promedio / (finbert_promedio + 1e-9),\n",
         "                \"sentiment_combined\": (vader_promedio + finbert_promedio) / 2\n",
-        "            }\n",
-        "            df = pd.concat([df, pd.DataFrame([new_row])], ignore_index=True)\n",
+        "            }])\n",
         "        else:\n",
-        "            df.loc[last_idx, \"vader\"] = vader_promedio\n",
-        "            df.loc[last_idx, \"finbert\"] = finbert_promedio\n",
-        "            df.loc[last_idx, \"sentiment_ratio\"] = vader_promedio / (finbert_promedio + 1e-9)\n",
-        "            df.loc[last_idx, \"sentiment_combined\"] = (vader_promedio + finbert_promedio) / 2\n",
+        "            df[\"timestamp\"] = pd.to_datetime(df[\"timestamp\"], errors=\"coerce\")\n",
+        "            df[\"timestamp\"] = df[\"timestamp\"].dt.tz_localize(None)\n",
+        "            df[\"date_only\"] = df[\"timestamp\"].dt.date\n",
+        "            last_date = df[\"date_only\"].max()\n",
+        "            last_idx = df[df[\"date_only\"] == last_date].index\n",
         "\n",
-        "        df.drop(columns=[\"date_only\"], inplace=True, errors=\"ignore\")\n",
+        "            if len(last_idx) == 0:\n",
+        "                # Añadir nueva fila mínima con columnas existentes\n",
+        "                new_row = {col: None for col in df.columns}\n",
+        "                new_row.update({\n",
+        "                    \"timestamp\": (pd.Timestamp.utcnow().date() - pd.Timedelta(days=1)).strftime(\"%Y-%m-%d\"),\n",
+        "                    \"vader\": vader_promedio,\n",
+        "                    \"finbert\": finbert_promedio,\n",
+        "                    \"sentiment_ratio\": vader_promedio / (finbert_promedio + 1e-9),\n",
+        "                    \"sentiment_combined\": (vader_promedio + finbert_promedio) / 2\n",
+        "                })\n",
+        "                df = pd.concat([df, pd.DataFrame([new_row])], ignore_index=True)\n",
+        "            else:\n",
+        "                # Actualizar última fila\n",
+        "                df.loc[last_idx, \"vader\"] = vader_promedio\n",
+        "                df.loc[last_idx, \"finbert\"] = finbert_promedio\n",
+        "                df.loc[last_idx, \"sentiment_ratio\"] = vader_promedio / (finbert_promedio + 1e-9)\n",
+        "                df.loc[last_idx, \"sentiment_combined\"] = (vader_promedio + finbert_promedio) / 2\n",
+        "\n",
+        "            df.drop(columns=[\"date_only\"], inplace=True, errors=\"ignore\")\n",
         "\n",
         "    return df\n",
         "\n",
-        "\n",
         "def calcular_target_df(df, symbol=None):\n",
         "    \"\"\"\n",
-        "    Calcula el target de subida para cada fila del DataFrame.\n",
-        "    Los thresholds y el modo (daily/full) se leen desde config.txt\n",
+        "    Calcula el target de subida como número y su categoría.\n",
+        "    Se leen thresholds y modo desde config.txt.\n",
+        "    Mantiene todas las columnas existentes y añade:\n",
+        "        - target (numérico)\n",
+        "        - target_category (categórico)\n",
         "    \"\"\"\n",
-        "    # Leer thresholds y modo desde config.txt\n",
+        "    import pandas as pd\n",
+        "\n",
+        "    # ========================\n",
+        "    # Leer thresholds y modo\n",
+        "    # ========================\n",
         "    target_config = {}\n",
         "    mode = \"daily\"\n",
         "    with open(\"config.txt\", \"r\") as f:\n",
@@ -177,7 +188,17 @@
         "                elif key == \"mode\":\n",
         "                    mode = value.lower()\n",
         "\n",
+        "    # ========================\n",
+        "    # Crear columnas si no existen\n",
+        "    # ========================\n",
+        "    if \"target_category\" not in df.columns:\n",
+        "        df[\"target_category\"] = None\n",
+        "    if \"target\" not in df.columns:\n",
+        "        df[\"target\"] = pd.NA\n",
+        "\n",
+        "    # ========================\n",
         "    # Función de categorización\n",
+        "    # ========================\n",
         "    def categorizar(r):\n",
         "        if pd.isna(r):\n",
         "            return None\n",
@@ -192,12 +213,30 @@
         "        else:\n",
         "            return \"Negative\"\n",
         "\n",
-        "    # Elegir qué filas procesar\n",
+        "    # ========================\n",
+        "    # Función de cálculo de target numérico\n",
+        "    # ========================\n",
+        "    def calcular_target(r):\n",
+        "        if pd.isna(r):\n",
+        "            return pd.NA\n",
+        "        # Simplemente devolvemos el return_pct como target\n",
+        "        # Si quieres otra fórmula, se puede ajustar aquí\n",
+        "        return r\n",
+        "\n",
+        "    # ========================\n",
+        "    # Procesar solo si existe return_pct\n",
+        "    # ========================\n",
+        "    if \"return_pct\" not in df.columns:\n",
+        "        df[\"return_pct\"] = pd.NA\n",
+        "\n",
+        "    # Elegir filas según modo\n",
         "    if mode == \"daily\":\n",
         "        idx = df.index[-1:]  # última fila\n",
         "    else:\n",
         "        idx = df.index       # todas las filas\n",
         "\n",
+        "    # Aplicar cálculo\n",
+        "    df.loc[idx, \"target\"] = df.loc[idx, \"return_pct\"].apply(calcular_target)\n",
         "    df.loc[idx, \"target_category\"] = df.loc[idx, \"return_pct\"].apply(categorizar)\n",
         "\n",
         "    return df\n",
