--- a/cerbero-pre.ipynb
+++ b/cerbero-pre.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN7qCCeXPl1Si01Dh72YJbJ",
+      "authorship_tag": "ABX9TyPMwAFQYtlmr+JY9z3sH3Er",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -199,7 +199,7 @@
         "    # ========================\n",
         "    # Función de categorización\n",
         "    # ========================\n",
-        "    def categorizar(r):\n",
+        "  def categorizar(r):\n",
         "        if pd.isna(r):\n",
         "            return None\n",
         "        elif r >= target_config[\"high_threshold\"]:\n",
@@ -213,10 +213,23 @@
         "        else:\n",
         "            return \"Negative\"\n",
         "\n",
+        "  def categorizar_num(r):\n",
+        "        if pd.isna(r):\n",
+        "            return None\n",
+        "        elif r >= target_config[\"high_threshold\"]:\n",
+        "            return \"4\"\n",
+        "        elif r >= target_config[\"medium_threshold\"]:\n",
+        "            return \"3\"\n",
+        "        elif r >= target_config[\"low_threshold\"]:\n",
+        "            return \"2\"\n",
+        "        elif r >= target_config[\"below_threshold\"]:\n",
+        "            return \"1\"\n",
+        "        else:\n",
+        "            return \"0\"\n",
         "    # ========================\n",
         "    # Función de cálculo de target numérico\n",
         "    # ========================\n",
-        "    def calcular_target(r):\n",
+        "  def calcular_target(r):\n",
         "        if pd.isna(r):\n",
         "            return pd.NA\n",
         "        # Simplemente devolvemos el return_pct como target\n",
@@ -238,6 +251,7 @@
         "    # Aplicar cálculo\n",
         "    df.loc[idx, \"target\"] = df.loc[idx, \"return_pct\"].apply(calcular_target)\n",
         "    df.loc[idx, \"target_category\"] = df.loc[idx, \"return_pct\"].apply(categorizar)\n",
+        "    df.loc[idx, \"target_num\"] = df.loc[idx, \"return_pct\"].apply(categorizar_num)\n",
         "\n",
         "    return df\n",
         "\n",
