--- a/cerbero-pre.ipynb
+++ b/cerbero-pre.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNFND6lzbFRZzmXDn1ZRKL3",
+      "authorship_tag": "ABX9TyMoJS+OhXjtEnPImb6/YoMj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -161,6 +161,102 @@
         "            df.drop(columns=[\"date_only\"], inplace=True, errors=\"ignore\")\n",
         "\n",
         "    return df\n",
+        "\n",
+        "\n",
+        "\n",
+        "def calcular_target_df(df, symbol=None):\n",
+        "    \"\"\"\n",
+        "    Calcula el target de subida como número y su categoría.\n",
+        "    Para pre-market, el target calculado corresponde al día anterior\n",
+        "    (última fila contiene cierre del día anterior + noticias de hoy antes de apertura).\n",
+        "    \"\"\"\n",
+        "    import pandas as pd\n",
+        "\n",
+        "    # ========================\n",
+        "    # Leer thresholds y modo\n",
+        "    # ========================\n",
+        "    target_config = {}\n",
+        "    mode = \"daily\"\n",
+        "    with open(\"config.txt\", \"r\") as f:\n",
+        "        for line in f:\n",
+        "            if \"=\" in line:\n",
+        "                key, value = line.strip().split(\"=\")\n",
+        "                key = key.strip()\n",
+        "                value = value.strip()\n",
+        "                if key in [\"high_threshold\", \"medium_threshold\", \"low_threshold\", \"below_threshold\"]:\n",
+        "                    target_config[key] = float(value)\n",
+        "                elif key == \"mode\":\n",
+        "                    mode = value.lower()\n",
+        "\n",
+        "    # ========================\n",
+        "    # Crear columnas si no existen\n",
+        "    # ========================\n",
+        "    for col in [\"target\", \"target_category\", \"target_num\"]:\n",
+        "        if col not in df.columns:\n",
+        "            df[col] = pd.NA\n",
+        "\n",
+        "    if \"return_pct\" not in df.columns:\n",
+        "        df[\"return_pct\"] = pd.NA\n",
+        "\n",
+        "    # ========================\n",
+        "    # Funciones de categorización\n",
+        "    # ========================\n",
+        "    def categorizar(r):\n",
+        "        if pd.isna(r):\n",
+        "            return None\n",
+        "        elif r >= target_config[\"high_threshold\"]:\n",
+        "            return \"Very High\"\n",
+        "        elif r >= target_config[\"medium_threshold\"]:\n",
+        "            return \"High\"\n",
+        "        elif r >= target_config[\"low_threshold\"]:\n",
+        "            return \"Medium\"\n",
+        "        elif r >= target_config[\"below_threshold\"]:\n",
+        "            return \"Low\"\n",
+        "        else:\n",
+        "            return \"Negative\"\n",
+        "\n",
+        "    def categorizar_num(r):\n",
+        "        if pd.isna(r):\n",
+        "            return None\n",
+        "        elif r >= target_config[\"high_threshold\"]:\n",
+        "            return \"4\"\n",
+        "        elif r >= target_config[\"medium_threshold\"]:\n",
+        "            return \"3\"\n",
+        "        elif r >= target_config[\"low_threshold\"]:\n",
+        "            return \"2\"\n",
+        "        elif r >= target_config[\"below_threshold\"]:\n",
+        "            return \"1\"\n",
+        "        else:\n",
+        "            return \"0\"\n",
+        "\n",
+        "    def calcular_target(r):\n",
+        "        if pd.isna(r):\n",
+        "            return pd.NA\n",
+        "        return r\n",
+        "\n",
+        "    # ========================\n",
+        "    # Calcular target para todas las filas\n",
+        "    # ========================\n",
+        "    df['target'] = df['return_pct'].apply(calcular_target)\n",
+        "    df['target_category'] = df['return_pct'].apply(categorizar)\n",
+        "    df['target_num'] = df['return_pct'].apply(categorizar_num)\n",
+        "\n",
+        "    # ========================\n",
+        "    # Desplazar targets para que correspondan al día anterior\n",
+        "    # ========================\n",
+        "    if mode == \"daily\":\n",
+        "        # Solo actualizar última fila: target del día anterior\n",
+        "        if len(df) >= 2:\n",
+        "            df.loc[df.index[-2], ['target', 'target_category', 'target_num']] = df.loc[df.index[-1], ['target', 'target_category', 'target_num']].values\n",
+        "    else:\n",
+        "        # Full: desplazar todo hacia atrás\n",
+        "        df[['target', 'target_category', 'target_num']] = df[['target', 'target_category', 'target_num']].shift(1)\n",
+        "\n",
+        "    return df\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
         "\n",
         "\n",
         "# ===============================================\n",
