--- a/cerbero-pre.ipynb
+++ b/cerbero-pre.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMoJS+OhXjtEnPImb6/YoMj",
+      "authorship_tag": "ABX9TyNXd7eBorrnLl9N0rXnTcNy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -164,47 +164,57 @@
         "\n",
         "\n",
         "\n",
-        "def calcular_target_df(df, symbol=None):\n",
+        "    def calcular_target_df(df, symbol=None):\n",
         "    \"\"\"\n",
-        "    Calcula el target de subida como número y su categoría.\n",
-        "    Para pre-market, el target calculado corresponde al día anterior\n",
-        "    (última fila contiene cierre del día anterior + noticias de hoy antes de apertura).\n",
+        "    Calcula/ajusta los targets según la lógica pre-market y el modo.\n",
+        "    - Asume que la última fila del DataFrame corresponde al cierre de 'ayer'\n",
+        "      y que contiene las noticias/sentiment \"de hoy\" (pre-market).\n",
+        "    - Modo 'daily':\n",
+        "        * Calcula el target usando return_pct disponible y lo asigna a la PENÚLTIMA fila\n",
+        "          (es decir, el target calculado hoy corresponde a la fila anterior a la última).\n",
+        "        * Deja la ÚLTIMA fila con target vacío (pd.NA) porque es la fila premarket de hoy.\n",
+        "    - Modo 'full':\n",
+        "        * Recalcula targets para todo el histórico y desplaza todo una fila hacia atrás\n",
+        "          (shift(-1)), dejando la última fila vacía.\n",
+        "    Devuelve df modificado (sin guardar).\n",
         "    \"\"\"\n",
         "    import pandas as pd\n",
         "\n",
-        "    # ========================\n",
-        "    # Leer thresholds y modo\n",
-        "    # ========================\n",
+        "    # --- Leer thresholds y modo desde config.txt ---\n",
         "    target_config = {}\n",
         "    mode = \"daily\"\n",
-        "    with open(\"config.txt\", \"r\") as f:\n",
-        "        for line in f:\n",
-        "            if \"=\" in line:\n",
-        "                key, value = line.strip().split(\"=\")\n",
-        "                key = key.strip()\n",
-        "                value = value.strip()\n",
-        "                if key in [\"high_threshold\", \"medium_threshold\", \"low_threshold\", \"below_threshold\"]:\n",
-        "                    target_config[key] = float(value)\n",
-        "                elif key == \"mode\":\n",
-        "                    mode = value.lower()\n",
+        "    try:\n",
+        "        with open(\"config.txt\", \"r\") as f:\n",
+        "            for line in f:\n",
+        "                if \"=\" in line:\n",
+        "                    key, value = line.strip().split(\"=\")\n",
+        "                    key = key.strip()\n",
+        "                    value = value.strip()\n",
+        "                    if key in [\"high_threshold\", \"medium_threshold\", \"low_threshold\", \"below_threshold\"]:\n",
+        "                        target_config[key] = float(value)\n",
+        "                    elif key == \"mode\":\n",
+        "                        mode = value.lower()\n",
+        "    except FileNotFoundError:\n",
+        "        # Si no hay config, dejamos thresholds por defecto (si hace falta cámbialos)\n",
+        "        target_config = {\n",
+        "            \"high_threshold\": 0.05,\n",
+        "            \"medium_threshold\": 0.02,\n",
+        "            \"low_threshold\": 0.01,\n",
+        "            \"below_threshold\": 0.0\n",
+        "        }\n",
         "\n",
-        "    # ========================\n",
-        "    # Crear columnas si no existen\n",
-        "    # ========================\n",
+        "    # --- Asegurar columnas ---\n",
         "    for col in [\"target\", \"target_category\", \"target_num\"]:\n",
         "        if col not in df.columns:\n",
         "            df[col] = pd.NA\n",
-        "\n",
         "    if \"return_pct\" not in df.columns:\n",
         "        df[\"return_pct\"] = pd.NA\n",
         "\n",
-        "    # ========================\n",
-        "    # Funciones de categorización\n",
-        "    # ========================\n",
+        "    # --- Categorizar ---\n",
         "    def categorizar(r):\n",
         "        if pd.isna(r):\n",
-        "            return None\n",
-        "        elif r >= target_config[\"high_threshold\"]:\n",
+        "            return pd.NA\n",
+        "        if r >= target_config[\"high_threshold\"]:\n",
         "            return \"Very High\"\n",
         "        elif r >= target_config[\"medium_threshold\"]:\n",
         "            return \"High\"\n",
@@ -217,8 +227,8 @@
         "\n",
         "    def categorizar_num(r):\n",
         "        if pd.isna(r):\n",
-        "            return None\n",
-        "        elif r >= target_config[\"high_threshold\"]:\n",
+        "            return pd.NA\n",
+        "        if r >= target_config[\"high_threshold\"]:\n",
         "            return \"4\"\n",
         "        elif r >= target_config[\"medium_threshold\"]:\n",
         "            return \"3\"\n",
@@ -229,33 +239,68 @@
         "        else:\n",
         "            return \"0\"\n",
         "\n",
-        "    def calcular_target(r):\n",
-        "        if pd.isna(r):\n",
-        "            return pd.NA\n",
-        "        return r\n",
+        "    # --- Asegurar orden por timestamp para que shift sea coherente ---\n",
+        "    if \"timestamp\" in df.columns:\n",
+        "        try:\n",
+        "            df[\"timestamp\"] = pd.to_datetime(df[\"timestamp\"], errors=\"coerce\")\n",
+        "            df = df.sort_values(\"timestamp\").reset_index(drop=True)\n",
+        "        except Exception:\n",
+        "            # si fallara, no hacemos nada (pero idealmente timestamp debe existir)\n",
+        "            pass\n",
         "\n",
-        "    # ========================\n",
-        "    # Calcular target para todas las filas\n",
-        "    # ========================\n",
-        "    df['target'] = df['return_pct'].apply(calcular_target)\n",
-        "    df['target_category'] = df['return_pct'].apply(categorizar)\n",
-        "    df['target_num'] = df['return_pct'].apply(categorizar_num)\n",
+        "    # --- Cálculo base del target (directo desde return_pct) ---\n",
+        "    # Nota: aquí solo transformamos return_pct en target; si tu fórmula es distinta,\n",
+        "    # sustituye df['return_pct'] por la fórmula adecuada.\n",
+        "    df['target_calc'] = df['return_pct']  # columna intermedia para no sobrescribir de inmediato\n",
+        "    df['target_calc_category'] = df['return_pct'].apply(categorizar)\n",
+        "    df['target_calc_num'] = df['return_pct'].apply(categorizar_num)\n",
         "\n",
-        "    # ========================\n",
-        "    # Desplazar targets para que correspondan al día anterior\n",
-        "    # ========================\n",
-        "    if mode == \"daily\":\n",
-        "        # Solo actualizar última fila: target del día anterior\n",
-        "        if len(df) >= 2:\n",
-        "            df.loc[df.index[-2], ['target', 'target_category', 'target_num']] = df.loc[df.index[-1], ['target', 'target_category', 'target_num']].values\n",
-        "    else:\n",
-        "        # Full: desplazar todo hacia atrás\n",
-        "        df[['target', 'target_category', 'target_num']] = df[['target', 'target_category', 'target_num']].shift(1)\n",
+        "    # --- Ajustar según modo ---\n",
+        "    if mode == \"full\":\n",
+        "        # Recalcula todo y desplaza una fila hacia atrás.\n",
+        "        if len(df) >= 1:\n",
+        "            df['target'] = df['target_calc'].shift(-1)\n",
+        "            df['target_category'] = df['target_calc_category'].shift(-1)\n",
+        "            df['target_num'] = df['target_calc_num'].shift(-1)\n",
+        "            # La última fila queda vacía (premarket)\n",
+        "            df.loc[df.index[-1], ['target', 'target_category', 'target_num']] = pd.NA\n",
         "\n",
+        "    else:  # default \"daily\"\n",
+        "        # Lógica daily: la penúltima fila recibe el target calculado a partir del return disponible en la última fila\n",
+        "        # (porque la última fila es \"ayer + noticias de hoy\" y su return corresponde a lo que pasó hoy)\n",
+        "        if len(df) == 0:\n",
+        "            # nada que hacer\n",
+        "            return df\n",
+        "        elif len(df) == 1:\n",
+        "            # Solo una fila: no hay penúltima a la que asignar. Dejamos target vacío.\n",
+        "            df.loc[df.index[0], ['target', 'target_category', 'target_num']] = pd.NA\n",
+        "        else:\n",
+        "            # asignar penúltima <- cálculo basado en última fila\n",
+        "            # aseguramos manejar NaN: si última fila no tiene return_pct, dejamos penúltima como NaN\n",
+        "            last_idx = df.index[-1]\n",
+        "            penult_idx = df.index[-2]\n",
+        "\n",
+        "            last_target_val = df.at[last_idx, 'target_calc']\n",
+        "            last_target_cat = df.at[last_idx, 'target_calc_category']\n",
+        "            last_target_num = df.at[last_idx, 'target_calc_num']\n",
+        "\n",
+        "            # Asignamos solo si hay valor válido; si no, dejamos NaN\n",
+        "            if pd.isna(last_target_val):\n",
+        "                df.loc[penult_idx, ['target', 'target_category', 'target_num']] = pd.NA\n",
+        "            else:\n",
+        "                df.loc[penult_idx, 'target'] = last_target_val\n",
+        "                df.loc[penult_idx, 'target_category'] = last_target_cat\n",
+        "                df.loc[penult_idx, 'target_num'] = last_target_num\n",
+        "\n",
+        "            # Dejamos la última fila vacía (es la fila premarket de hoy)\n",
+        "            df.loc[last_idx, ['target', 'target_category', 'target_num']] = pd.NA\n",
+        "\n",
+        "    # --- Limpiar columnas internas ---\n",
+        "    df.drop(columns=[c for c in ['target_calc', 'target_calc_category', 'target_calc_num'] if c in df.columns], inplace=True)\n",
+        "\n",
+        "    # Reset index por si cambió el orden\n",
+        "    df = df.reset_index(drop=True)\n",
         "    return df\n",
-        "\n",
-        "\n",
-        "\n",
         "\n",
         "\n",
         "\n",
