Deploy cerbero-post.ipynb to dev

--- a/cerbero-post.ipynb
+++ b/cerbero-post.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyMcvmpnNkzh7b55u9UKbfkH",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/4L3M4R/cerbero/blob/main/cerbero_post.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -114,36 +98,103 @@
         "    url = \"https://api.bitget.com/api/v2/mix/market/history-candles\"\n",
         "    params = {\"symbol\": symbol, \"productType\": \"USDT-FUTURES\", \"granularity\": granularity, \"limit\": limit}\n",
         "    response = requests.get(url, params=params)\n",
+        "\n",
         "    if response.status_code != 200:\n",
         "        registrar_log(f\"Error Bitget {symbol}: {response.text}\")\n",
         "        return None\n",
+        "\n",
         "    data = response.json().get(\"data\", [])\n",
         "    if not data:\n",
         "        registrar_log(f\"No hay datos Bitget {symbol}\")\n",
         "        return None\n",
+        "\n",
+        "    # Crear DataFrame\n",
         "    df = pd.DataFrame(data, columns=[\"timestamp\", \"open\", \"high\", \"low\", \"close\", \"volume\", \"quoteVolume\"])\n",
+        "\n",
+        "    # Convertir timestamp\n",
         "    df[\"timestamp\"] = pd.to_datetime(df[\"timestamp\"].astype(int), unit='ms', utc=True)\n",
-        "    df[\"symbol\"] = symbol\n",
+        "\n",
+        "    # Ordenar\n",
         "    df = df.sort_values(\"timestamp\")\n",
-        "    registrar_log(f\"Descargados {len(df)} registros desde Bitget para {symbol}\")\n",
+        "    df[\"symbol\"] = symbol\n",
+        "\n",
+        "    # ----------------------------\n",
+        "    # ❗ EXCLUIR LA VELA DEL DÍA ACTUAL (si existe)\n",
+        "    # ----------------------------\n",
+        "    hoy_utc = pd.Timestamp.utcnow().normalize()  # 00:00 UTC de hoy\n",
+        "    df = df[df[\"timestamp\"] < hoy_utc]\n",
+        "\n",
+        "    registrar_log(f\"Descargados {len(df)} registros desde Bitget para {symbol} (excluyendo hoy)\")\n",
         "    return df\n",
+        "\n",
+        "\n",
+        "#def descargar_datos_yf(symbol, interval, period, limit):\n",
+        "#    data = yf.download(tickers=symbol, interval=interval, period=period)\n",
+        "#    if data.empty:\n",
+        "#        registrar_log(f\"No se encontraron datos Yahoo Finance {symbol}\")\n",
+        "#        return None\n",
+        "#    if isinstance(data.columns, pd.MultiIndex):\n",
+        "#        data.columns = [col[0].lower() for col in data.columns]\n",
+        "#    else:\n",
+        "#        data.columns = [col.lower() for col in data.columns]\n",
+        "#    data = data.reset_index()\n",
+        "#    rename_map = {'open':'open','high':'high','low':'low','close':'close','volume':'volume','Date':'timestamp'}\n",
+        "#    data.rename(columns=rename_map, inplace=True)\n",
+        "#    data[\"symbol\"] = symbol\n",
+        "#    data = data.head(limit)\n",
+        "#    registrar_log(f\"Descargados {len(data)} registros desde Yahoo Finance para {symbol}\")\n",
+        "#    return data\n",
         "\n",
         "def descargar_datos_yf(symbol, interval, period, limit):\n",
         "    data = yf.download(tickers=symbol, interval=interval, period=period)\n",
+        "    \n",
         "    if data.empty:\n",
         "        registrar_log(f\"No se encontraron datos Yahoo Finance {symbol}\")\n",
         "        return None\n",
+        "    \n",
+        "    # Normalizar columnas\n",
         "    if isinstance(data.columns, pd.MultiIndex):\n",
         "        data.columns = [col[0].lower() for col in data.columns]\n",
         "    else:\n",
         "        data.columns = [col.lower() for col in data.columns]\n",
+        "\n",
+        "    # Resetear índice para tener timestamp en una columna\n",
         "    data = data.reset_index()\n",
-        "    rename_map = {'open':'open','high':'high','low':'low','close':'close','volume':'volume','Date':'timestamp'}\n",
+        "\n",
+        "    # Renombrar columnas\n",
+        "    rename_map = {\n",
+        "        'open': 'open',\n",
+        "        'high': 'high',\n",
+        "        'low': 'low',\n",
+        "        'close': 'close',\n",
+        "        'volume': 'volume',\n",
+        "        'date': 'timestamp',   # <- YF usa 'Date' pero pandas lo pasa a 'date'\n",
+        "        'Date': 'timestamp'\n",
+        "    }\n",
         "    data.rename(columns=rename_map, inplace=True)\n",
-        "    data[\"symbol\"] = symbol\n",
+        "\n",
+        "    # Convertir timestamp a UTC para coherencia\n",
+        "    if \"timestamp\" in data.columns:\n",
+        "        data[\"timestamp\"] = pd.to_datetime(data[\"timestamp\"], utc=True)\n",
+        "    else:\n",
+        "        registrar_log(f\"ERROR: No timestamp en datos de {symbol}\")\n",
+        "        return None\n",
+        "\n",
+        "    # ----------------------------\n",
+        "    # ❗ EXCLUIR LA VELA DEL DÍA DE HOY\n",
+        "    # ----------------------------\n",
+        "    hoy_utc = pd.Timestamp.utcnow().normalize()\n",
+        "    data = data[data[\"timestamp\"] < hoy_utc]\n",
+        "\n",
+        "    # Limitar número de filas\n",
         "    data = data.head(limit)\n",
-        "    registrar_log(f\"Descargados {len(data)} registros desde Yahoo Finance para {symbol}\")\n",
+        "\n",
+        "    # Añadir símbolo\n",
+        "    data[\"symbol\"] = symbol\n",
+        "\n",
+        "    registrar_log(f\"Descargados {len(data)} registros desde Yahoo Finance para {symbol} (excluyendo hoy)\")\n",
         "    return data\n",
+        "\n",
         "\n",
         "# ===============================================\n",
         "#           CALCULO DE INDICADORES\n",
@@ -218,5 +269,21 @@
         "print(\"Completed postmarket\")\n"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyMcvmpnNkzh7b55u9UKbfkH",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
